--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,10 +33,6 @@
 
     <link href="./assets/vendors/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" /> 
 
- 
-
-
-
   </head>
   <body class="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed 
   m-header--fixed-mobile m-aside-left--enabled 
@@ -65,7 +61,9 @@
 		<!--begin::Page Scripts -->
 		<script src="./assets/demo/default/custom/crud/datatables/basic/basic.js" type="text/javascript"></script>
 
+    <script src="./assets/demo/default/custom/crud/datatables/basic/paginations.js" type="text/javascript"></script>
 
+    <script src="./assets/demo/default/custom/crud/forms/widgets/bootstrap-datepicker.js" type="text/javascript"></script>
 
     <!-- <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script> -->
 
