--- a/client/public/index.html
+++ b/client/public/index.html
@@ -54,18 +54,35 @@
 		<script src="./assets/app/js/dashboard.js" type="text/javascript"></script>
 
 
-    <script src="./assets/vendors/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
+    <!-- <script src="./assets/vendors/custom/datatables/datatables.bundle.js" type="text/javascript"></script> -->
 
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts -->
-		<script src="./assets/demo/default/custom/crud/datatables/basic/basic.js" type="text/javascript"></script>
+		<!-- <script src="./assets/demo/default/custom/crud/datatables/basic/basic.js" type="text/javascript"></script> -->
 
-    <script src="./assets/demo/default/custom/crud/datatables/basic/paginations.js" type="text/javascript"></script>
+    <!-- <script src="./assets/demo/default/custom/crud/datatables/basic/paginations.js" type="text/javascript"></script> -->
 
     <script src="./assets/demo/default/custom/crud/forms/widgets/bootstrap-datepicker.js" type="text/javascript"></script>
 
-    <!-- <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script> -->
+
+    
+
+  
+
+    <!-- <script src="../../../assets/vendors/base/vendors.bundle.js" type="text/javascript"></script> -->
+		<!-- <script src="../../../assets/demo/default/base/scripts.bundle.js" type="text/javascript"></script> -->
+
+		<!--end::Global Theme Bundle -->
+
+		<!--begin::Page Vendors -->
+		<script src="./assets/vendors/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
+
+		<!--end::Page Vendors -->
+
+		<!--begin::Page Scripts -->
+		<script src="./assets/demo/default/custom/crud/datatables/basic/paginations.js" type="text/javascript"></script>
+
 
   </body>
 </html>
